<resources>
    <string name="app_name">Task Titans</string>
    <string name="display_name_txt">Display Name</string>
    <string name="inventory_txt">Inventory</string>
    <string name="equip_txt">Equip</string>
    <string name="inventory_placeholder">Whoa, your bag is empty!</string>
    <string name="quest_board_txt">Quest Board</string>
    <string name="skills_title">Character Skills</string>
    <string name="stats_title">Character Stats</string>
    <string name="use_skill_txt">Use Skill</string>
    <string name="shop_txt">Shop</string>
    <string name="return_txt">Back</string>
    <string name="buy_txt">Buy</string>
    <string name="guild_join_txt">Guild Joiner</string>
    <string name="search_txt">Search</string>
    <string name="search_hint_txt">Enter a guild name to search</string>
    <string name="create_guild_txt">Create a Guild</string>
    <string name="guild_challenge_txt">Guild Challenge</string>
    <string name="guild_chat_txt">Guild Chat</string>
    <string name="member_list_txt">Members</string>
    <string name="leave_txt">Leave</string>
    <string name="send_txt">Send</string>
    <string name="chat_input_txt">Say something nice</string>
    <string name="appearance_txt">Appearance</string>
    <string name="skin_color_txt">Skin Color</string>
    <string name="gender_txt">Gender</string>
    <string name="hair_color_txt">Hair Color</string>
    <string name="continue_txt">Continue</string>
    <string name="finish_txt">Finish</string>
    <string name="character_details_txt">Details</string>
    <string name="customize_character_txt">Customize your character</string>
    <string name="race_txt">Race</string>
    <string name="class_txt">Class</string>
    <string name="tasks_txt">Tasks</string>
    <string name="quests_txt">Quests</string>
    <string name="repeat_tasks_txt">Repeat Tasks</string>
    <string name="group_tasks_txt">Group Tasks</string>
    <string name="create_tasks_txt">Create Task</string>
    <string name="task_name">Name</string>
    <string name="task_desc">Description</string>
    <string name="task_count">Count</string>
    <string name="task_count_hint">Leave blank if only 1</string>
    <string name="task_date">Date</string>
    <string name="task_freq">Freq</string>
    <string name="join_txt">Join</string>
    <string name="create_group_txt">Create Group Task</string>
    <string name="level">Level</string>
    <string name="level_hint">Minimum Level</string>
    <string name="guild_logo">Crest</string>
    <string name="create_guild">Create Guild</string>
    <string name="task_time">Time</string>
    <string name="frequency">Frequency</string>
    <string name="weeks">Every Chosen Number of Weeks</string>
    <string name="months">Chosen Months</string>
    <string name="days">Chosen Days</string>
    <string name="date">Date Only</string>
    <string name="weeks_hint">Task will occur every entered # of weeks</string>
    <string name="months_hint">Task will occur on the chosen months. Don\'t check any if task should occur monthly</string>
    <string name="days_hint">Task will occur on the chosen days. Don\'t check any if the task should occur daily</string>
    <string name="date_hint">Task will only occur on this specific day annually</string>
    <string name="remove_txt">Remove</string>
    <string name="go_txt">Go</string>
    <string name="group_details_txt">Group Panel</string>
    <string name="remove_member">Remove Member</string>
    <string name="disband">Disband</string>
    <string name="assign_task">Assign Task</string>
    <string name="complete_task">Complete Task</string>
    <string name="leave_group">Leave Group</string>
    <string name="group_page_placeholder">Group Page</string>
    <string name="guild_info_txt">Guild Info</string>
    <string name="check_group_txt">Check Group</string>
    <string name="create_task_group_txt">Create Task Group</string>
    <string name="guild_crest_txt">Guild Crest</string>
    <string name="kick_txt">Kick</string>

    <string name="strength_placeholder">Strength: </string>
    <string name="dexterity_placeholder">Dexterity: </string>
    <string name="intelligence_placeholder">Intelligence: </string>
    <string name="constitution_placeholder">Constitution: </string>

    <string name="subtitle">Your journey begins here</string>

    <string name="guild_nav_txt">Guild</string>
    <string name="task_nav_txt">Tasks</string>
    <string name="shop_nav_txt">Shop</string>
    <string name="stats_nav_txt">Stats</string>

    <string name="login_txt">Log In</string>
    <string name="signup_txt">Sign Up</string>
    <string name="username_txt">Username</string>
    <string name="password_txt">Password</string>
    <string name="email_txt">Email</string>

    <string name="pfp_content_info">Your Profile Picture</string>
    <string name="money_content_info">Money Icon</string>
    <string name="mana_content_info">Mana Icon</string>
    <string name="shopkeeper_content_info">A picture of the shop keeper doggo and his wares</string>
    <string name="female_content_info">Female gender selection</string>
    <string name="male_content_info">Male gender selection</string>
    <string name="fighter_content_info">Fighter class selection</string>
    <string name="archer_content_info">Archer class selection</string>
    <string name="mage_content_info">Mage class selection</string>
    <string name="human_content_info">Human race selection</string>
    <string name="orc_content_info">Orc race selection</string>
    <string name="elf_content_info">Elf race selection</string>

    <string name="placeholder_profile">Name:\nHP:\nLevel:</string>
    <string name="placeholder_stats">Strength:\nDexterity:\nIntellect:\nConstitution:</string>
    <string name="placeholder_money">0.00</string>
    <string name="placeholder_mana">100 MP</string>
    <string name="placeholder_skill">Skill</string>
    <string name="placeholder_skill_desc">Skill Description</string>
    <string name="placeholder_item_desc">Item Description</string>
    <string name="placeholder_guild_info">Guild Points:\nRank:\nMember Count:</string>
    <string name="placeholder_guild_name">Guild</string>
    <string name="placeholder_chat">Chat</string>

    <string name="january">Jan</string>
    <string name="february">Feb</string>
    <string name="march">Mar</string>
    <string name="april">Apr</string>
    <string name="may">May</string>
    <string name="june">Jun</string>
    <string name="july">Jul</string>
    <string name="august">Aug</string>
    <string name="september">Sep</string>
    <string name="october">Oct</string>
    <string name="november">Nov</string>
    <string name="december">Dec</string>

    <string name="sunday">Su</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">Th</string>
    <string name="friday">F</string>
    <string name="saturday">Sa</string>
</resources>
