<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:paddingLeft="@dimen/main_padding"
    android:paddingTop="@dimen/main_padding"
    android:paddingRight="@dimen/main_padding"
    android:paddingBottom="@dimen/main_padding"
    tools:context=".FrequencyPickerActivity">

    <TextView
        android:id="@+id/frequencyPickerTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_corners"
        android:backgroundTint="#84BC9C"
        android:fontFamily="@font/quest"
        android:paddingHorizontal="36dp"
        android:paddingVertical="8dp"
        android:text="@string/frequency"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/weeksPick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/weeksPick"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_corners"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="@font/quest"
        android:text="@string/weeks"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/freqWeeksInputBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frequencyPickerTitle"
        app:layout_constraintVertical_weight="1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/freqWeeksInputBar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_corners"
        android:backgroundTint="@color/colorField"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintBottom_toTopOf="@+id/monthsPick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weeksPick"
        app:layout_constraintVertical_weight="1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/freqWeeksInputTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quest"
            android:hint="@string/weeks_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/monthsPick"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_corners"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="@font/quest"
        android:text="@string/months"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/chosenMonthsDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/freqWeeksInputBar"
        app:layout_constraintVertical_weight="1" />

    <TextView
        android:id="@+id/chosenMonthsDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quest"
        android:text="@string/months_hint"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/monthsContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monthsPick" />

    <LinearLayout
        android:id="@+id/monthsContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/daysPick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chosenMonthsDesc"
        app:layout_constraintVertical_weight="2">

        <LinearLayout
            android:id="@+id/janToApril"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/janBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quest"
                android:text="@string/january" />

            <CheckBox
                android:id="@+id/febBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quest"
                android:text="@string/february" />

            <CheckBox
                android:id="@+id/marBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quest"
                android:text="@string/march" />

            <CheckBox
                android:id="@+id/aprBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quest"
                android:text="@string/april" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mayToAug"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/mayBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quest"
                android:text="@string/may" />

            <CheckBox
                android:id="@+id/junBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quest"
                android:text="@string/june" />

            <CheckBox
                android:id="@+id/julBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quest"
                android:text="@string/july" />

            <CheckBox
                android:id="@+id/augBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quest"
                android:text="@string/august" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/septToDec"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/septBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quest"
                android:text="@string/september" />

            <CheckBox
                android:id="@+id/octBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quest"
                android:text="@string/october" />

            <CheckBox
                android:id="@+id/novBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quest"
                android:text="@string/november" />

            <CheckBox
                android:id="@+id/decBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quest"
                android:text="@string/december" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/daysPick"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_corners"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="@font/quest"
        android:text="@string/days"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/chosenDaysDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monthsContainer"
        app:layout_constraintVertical_weight="1" />

    <TextView
        android:id="@+id/chosenDaysDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quest"
        android:text="@string/days_hint"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/daysContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daysPick" />

    <LinearLayout
        android:id="@+id/daysContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/datePick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chosenDaysDesc"
        app:layout_constraintVertical_weight="1">

        <LinearLayout
            android:id="@+id/sundayContainer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/sundayBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

            <TextView
                android:id="@+id/sundayText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quest"
                android:text="@string/sunday"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mondayContainer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/mondayBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

            <TextView
                android:id="@+id/mondayText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quest"
                android:text="@string/monday"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tuesdayContainer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/tuesdayBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

            <TextView
                android:id="@+id/tuesdayText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quest"
                android:text="@string/tuesday"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/wednesdayContainer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/wednesdayBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

            <TextView
                android:id="@+id/wednesdayText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quest"
                android:text="@string/wednesday"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/thursdayContainer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/thursdayBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

            <TextView
                android:id="@+id/thursdayText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quest"
                android:text="@string/thursday"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fridayContainer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/fridayBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

            <TextView
                android:id="@+id/fridayText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quest"
                android:text="@string/friday"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/saturdayContainer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/saturdayBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

            <TextView
                android:id="@+id/saturdayText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quest"
                android:text="@string/saturday"
                android:textAlignment="center" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/datePick"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_corners"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="@font/quest"
        android:text="@string/date"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/freqDateContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daysContainer"
        app:layout_constraintVertical_weight="1" />

    <LinearLayout
        android:id="@+id/freqDateContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePick"
        app:layout_constraintVertical_weight="1">

        <TextView
            android:id="@+id/freqDateLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@drawable/round_corners"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/quest"
            android:paddingVertical="10dp"
            android:text="@string/task_date"
            android:textColor="@android:color/white"
            android:textSize="36sp" />

        <ImageButton
            android:id="@+id/freqDatePickBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@drawable/round_corners"
            android:backgroundTint="@color/colorAccent"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/calendar" />

        <TextView
            android:id="@+id/frequencyDateTxt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:background="@drawable/round_corners"
            android:backgroundTint="@color/colorField"
            android:fontFamily="@font/quest"
            android:gravity="center"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="@color/colorTextDark"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>